Updated Swagger doc
